force-app/main/default/objects/Account/fields/Created_from_Monday_com__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Monday_com__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in backend to filter records from monday.com</description>
    <label>Created from Monday.com?</label>
    <type>Checkbox</type>
</CustomField>