force-app/main/default/objects/Account/fields/Portal_Access_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Portal_Access_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if account has Experience Cloud portal access</description>
    <label>Portal Access Enabled</label>
    <type>Checkbox</type>
</CustomField>