force-app/main/default/objects/Account/fields/Preferred_Venue__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Venue__c</fullName>
    <description>Customer&apos;s preferred event venue</description>
    <label>Preferred Venue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>