force-app/main/default/objects/Account/fields/Quotient_Id__c.field-meta.xml
<CustomField>
    <fullName>Quotient_Id__c</fullName>
    <label>Quotient Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>