force-app/main/default/objects/Account/fields/Quotient_Record_Last_Modified_On__c.field-meta.xml
<CustomField>
    <fullName>Quotient_Record_Last_Modified_On__c</fullName>
    <label>Quotient Record Last Modified On</label>
    <type>DateTime</type>
</CustomField>