force-app/main/default/objects/Account/fields/Quotient_Record_Synced_on__c.field-meta.xml
<CustomField>
    <fullName>Quotient_Record_Synced_on__c</fullName>
    <label>Quotient_Record Synced on</label>
    <type>DateTime</type>
</CustomField>