force-app/main/default/objects/Account/fields/Quotient_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Quotient_Record_URL__c</fullName>
    <label>Quotient Record URL</label>
    <type>Url</type>
</CustomField>