force-app/main/default/objects/Account/fields/Sync_to_Quotient__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Quotient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to Quotient</label>
    <type>Checkbox</type>
</CustomField>