force-app/main/default/objects/Account/fields/Synced_to_Quotient__c.field-meta.xml
<CustomField>
    <fullName>Synced_to_Quotient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced with Quotient?</label>
    <type>Checkbox</type>
</CustomField>