force-app/main/default/objects/Account/fields/Total_Lifetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Lifetime_Value__c</fullName>
    <description>Rollup of all closed-won opportunities</description>
    <label>Total Lifetime Value</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>