force-app/main/default/objects/Account/fields/Xero_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Xero_Contact_ID__c</fullName>
    <description>External ID for Xero integration</description>
    <externalId>true</externalId>
    <label>Xero Contact ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>